--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
-  "name": "Esther Bot",
-  "description": "Esther, bot.",
-  "keywords": ["esther", "bot", "express"],
-  "website": "https://estherbot.com",
-  "repository": "https://github.com/esthercrawford/smooch-bot-example",
-  "logo": "http://www.estherbot.com/wp-content/uploads/2016/03/EstherBot-photo.png",
+  "name": "Joe Bot",
+  "description": "Joe, bot.",
+  "keywords": ["joe", "bot", "express"],
+  "website": "https://bot.poweredbypurdy.com",
+  "repository": "https://github.com/PurdyForks/JoeBot",
+  "logo": "https://www.gravatar.com/avatar/28720525fb899a7945b928928c75430e",
   "env": {
     "SMOOCH_APP_TOKEN": {
       "description": "Your Smooch app token which is used to initialize the web widget.",
